<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainActivity18"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/activity_main18" />
        <item
            android:id="@+id/mainActivity5"
            android:icon="@drawable/ic_baseline_miscellaneous_services_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/mainActivity26"
            android:icon="@drawable/ic_baseline_view_sidebar_24"
            android:title="@string/activity_main26" />
        <item
            android:id="@+id/mainActivity13"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/mainActivity28"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/activity_main28" />

        <item
            android:id="@+id/mainActivity10"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/activity_main10" />
        <item
            android:id="@+id/mainActivity11"
            android:icon="@drawable/ic_baseline_contact_support_24"
            android:title="@string/activity_main11" />
        <item
            android:id="@+id/mainActivity17"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/activity_main17" />
        <item
            android:id="@+id/mainActivity15"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/activity_main15" />
    </group>
</menu>
